# pearl

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  build.ps1  build.sh
.github/workflows/: book.yml  ci.yml  gcc-analyzer.yml  stage0-linux-x86-64.yml
book/: Makefile  README.md  build.ps1
bootstrap/: Cargo.toml  README.md  rust-toolchain.toml
doc/: concept.md  lex.md
example/: README.md  hello.txt  var.txt
examples/: README.md  ebpf.pe  hello.pe  hello.prl  tokens.txt
include/: opt.h  ref.h  static.h
lib/: .gitignore  Makefile  cmd.rs  lex.h  lex.l
runtime/: main.c
scripts/: bunny.ps1  bunny.sh  cmake.sh
src/: .gitignore  Makefile  hello.c  lex.c  lexer.l  main.rs  opt.h  parser.y  pearl.c  shell.c  statics.h
src/compiler/: args.rs  macro_rules.rs  mod.rs  read_lines.rs
src/lexer/: lexer.rs
src/utils/: args.rs  read_lines.rs
stage0/: .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  main.c  platform.c  runtime.c  rust-toolchain.toml
stage0/include/: cli.h  log.h  mem.h  pearl.h  platform.h  syscallw.h  tokens.h  utils.h  vector.h  winh.h
stage0/lib/: log.h  pearl.h  platform.h
stage0/runtime/common/: runtime.c  stacki.c
stage0/runtime/darwin/x86-64/: exit.S  platform.c  stacki.c
stage0/runtime/linux/x86-64/: exit.S  stacki.c  start.S
stage0/runtime/windows/x86-64/: exit.c  platform.c  start.c
stage0/src/: argparse.rs  btf.rs  cli.c  co_re.rs  common.rs  lib.rs  log.c  log.rs  main.c  main.rs  pearl.c  platform.c  utils.c  vector.c
tests/: stage0_short_arguments.bats
tests/unix/: CMakeLists.txt  stage0_long_arguments.bats  stage0_parameters.bats
tests/windows/: CMakeLists.txt
